@@ -1,3 +1,9 @@
+2010-06-16  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* IsolatedStorageFile.cs: Remove should catch all the exceptions
+	caused by DirectoryInfo.Delete and throw an IsolatedStorageException
+	instead.
+
 2010-06-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* IsolatedStorageFile.cs: Ugh, accidentally forgot to commit the changes for
